Adding interactivity on home page buttons

--- a/public/_assets/app.css
+++ b/public/_assets/app.css
@@ -15,7 +15,9 @@ a {
 a:hover {
   color: #1976d2;
 }
-
+.homepageBtn{
+  font-weight: bold !important;
+}
 .text-center {
   text-align: center;
 }
