--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -15,6 +15,10 @@ a {
 a:hover {
   color: #1976d2;
 }
+.homePage{
+  margin-top: 15px;
+  padding-bottom: 50px;
+}
 .homepageBtn{
   font-weight: bold !important;
 }
@@ -24,9 +28,8 @@ a:hover {
 
 .top-bar {
   padding: 15px 15px;
-  width: 50%;
-  margin: 40px auto;
   background-color: #5BCCE7;
+  margin-top: 50px;
 }
 .top-bar::after {
   content: '';
@@ -41,6 +44,7 @@ a:hover {
 
 .top-bar-right {
   float: right;
+  padding-top: 7px;
 }
 
 .top-bar a,
@@ -48,12 +52,45 @@ a:hover {
   margin: 0 8px;
 }
 
-.container {
-  margin: 0 auto;
-  text-align: center;
-  width: 700px;
+.footerLinks{
+    position: fixed;
+    bottom: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.homeButtons{
+  padding-bottom: 65px;
+   text-align: center;
+}
+@media (min-width:700px){ 
+    #root{
+      width: 60%;
+      margin: 0 auto;
+    }
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px){
+  .container {
+    padding-right: 15px;
+  }
+}
+
+.textCenter{
+  text-align: center;
+}
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.floatNone{
+  float: none;
+}
 .card-heading {
   padding: 16px;
 }
