--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -110,13 +110,10 @@ a:hover {
 }
 
 .ajaxLoader{
-  position: absolute;
-  text-align: center;
-  background: rgba(255,255,255,.5);
-  width: 98%;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 5px;
   z-index:9;
-  opacity: 0.25;
-  height: 100%;
   top: 20%;
 }
